--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -189,7 +189,7 @@ table {
 }
 td,
 th {
-  padding: 0;
+
 }
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
@@ -1121,7 +1121,9 @@ figure {
   margin: 0;
 }
 img {
-  vertical-align: middle;
+	vertical-align: top;
+	top: 0px;
+	left: 0px;
 }
 .img-responsive,
 .thumbnail > img,
@@ -1601,7 +1603,9 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+	width: 1170px;
+	font-style: normal;
+	font-size: large;
   }
 }
 .container-fluid {
@@ -2264,6 +2268,8 @@ caption {
 }
 th {
 	text-align: left;
+	top: 0px;
+	right: 0px;
 }
 .table {
   width: 100%;
