--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1121,7 +1121,6 @@ figure {
   margin: 0;
 }
 img {
-	vertical-align: top;
 	top: 0px;
 	left: 0px;
 }
@@ -1598,21 +1597,23 @@ pre code {
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+	width: 800px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-	width: 1170px;
+	width: 900px;
 	font-style: normal;
 	font-size: large;
+	left: 1px;
+	align-items: baseline;
   }
 }
 .container-fluid {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+	padding-right: 15px;
+	padding-left: 0px;
+	margin-right: auto;
+	margin-left: auto;
 }
 .row {
   margin-right: -15px;
