--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1089,11 +1089,10 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333;
-  background-color: #fff;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	line-height: 1.3;
+	color: #333;
 }
 input,
 button,
@@ -1296,7 +1295,10 @@ h6,
   font-size: 12px;
 }
 p {
-  margin: 0 0 10px;
+	margin-top: 0;
+	margin-right: 0;
+	margin-left: 100px;
+	margin-bottom: 10px;
 }
 .lead {
   margin-bottom: 20px;
@@ -1585,10 +1587,8 @@ pre code {
   overflow-y: scroll;
 }
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+	margin-right: auto;
+	margin-left: auto;
 }
 @media (min-width: 768px) {
   .container {
@@ -1605,8 +1605,8 @@ pre code {
 	width: 900px;
 	font-style: normal;
 	font-size: large;
-	left: 1px;
-	align-items: baseline;
+	left: 2px;
+	float: left;
   }
 }
 .container-fluid {
@@ -1616,8 +1616,7 @@ pre code {
 	margin-left: auto;
 }
 .row {
-  margin-right: -15px;
-  margin-left: -15px;
+
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
@@ -2259,7 +2258,8 @@ pre code {
   }
 }
 table {
-  background-color: transparent;
+	background-color: transparent;
+	bottom: auto;
 }
 caption {
   padding-top: 8px;
@@ -5687,14 +5687,17 @@ a.list-group-item-danger.active:focus {
   padding-bottom: 75%;
 }
 .well {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	min-height: 20px;
+	padding-top: 2px;
+	padding-right: 2px;
+	padding-left: 2px;
+	padding-bottom: 2px;
+	margin-bottom: 20px;
+	background-color: #f5f5f5;
+	border: 1px solid #e3e3e3;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 .well blockquote {
   border-color: #ddd;
